--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ http {
         listen 80;
         server_name _;
 
+        # ton index.php est à la racine du projet
         root /var/www/html;
         index index.php index.html;
 
