--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
 
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass php:9000;
+            fastcgi_pass php_bds:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
