--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
-worker_processes auto;
+user  nginx;
+worker_processes  auto;
 
 events {
     worker_connections 1024;
@@ -9,18 +10,18 @@ http {
     default_type  application/octet-stream;
 
     sendfile        on;
-    keepalive_timeout 65;
+    keepalive_timeout  65;
 
     server {
         listen 80;
         server_name _;
 
-        # ton index.php est à la racine du projet
-        root /var/www/html;
+        # Laravel public dir
+        root /var/www/html/server/public;
         index index.php index.html;
 
         location / {
-            try_files $uri /index.php?$query_string;
+            try_files $uri $uri/ /index.php?$query_string;
         }
 
         location ~ \.php$ {
