--- a/.gitignore
+++ b/.gitignore
@@ -441,3 +441,29 @@ client/node_modules/
 client/.angular/
 client/dist/
 client/.editorconfig
+
+# Laravel
+/server/*.log
+/server/.DS_Store
+/server/.env
+/server/.env.backup
+/server/.env.production
+/server/.phpactor.json
+/server/.phpunit.result.cache
+/server/.fleet
+/server/.idea
+/server/.nova
+/server/.phpunit.cache
+/server/.vscode
+/server/.zed
+/server/auth.json
+/server/node_modules
+/server/public/build
+/server/public/hot
+/server/public/storage
+/server/storage/*.key
+/server/storage/pail
+/server/vendor
+/server/Homestead.json
+/server/Homestead.yaml
+/server/Thumbs.db
